--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,32 +13,55 @@
     <h2>A home-cooked lasagna in just 30 minutes</h2>
     <p>
         <li>
-         Making homemade lasagna much easier than it looks. <br>
-        You'll find the full, step-by-step recipe below — but here's a brief overview of what you can expect: 
+        Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor <br> 
+        — try this homemade lasagna recipe today!
+        You'll find the full, step-by-step recipe below — here's what you will need: 
         </li>
     </p>
-<ol>
-    <li>
-        <strong>Cook the meet:</strong> Cook the ground meat in a skillet until browned and crumbly.<br>
-        Add the onion and continue cooking until it's translucent.<br>
-        Stir in the canned tomato products, half of the parsley, garlic, basil,<br> 1.5 teaspoons of salt, oregano, and sugar.<br>
-    </li>
-    <li>
-        <strong>Cook the noodles:</strong> Boil the lasagna noodles in lightly salted water <br>
-        until they're al dente.
-    </li>
-    <li>
-        <strong>Make the cheese layer:</strong> Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, <br>
-        the remaining salt, and pepper in a bowl.
-    </li>
-    <li>
-        <strong>Assemble the lasagna:</strong> Layer the ingredients according to the recipe <br>
-        (starting with sauce and ending with mozzarella) until the lasagna is assembled.
-    </li>
-    <li>
-        <strong>Bake the lasagna:</strong> Cover with foil and bake in the preheated oven for about half an hour. <br>
-        Remove the foil and continue baking until the top is golden brown.
-    </li>
-</ol>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>½ pound ground pork</li>
+        <li>½ pound lean ground beef</li>
+        <li>½ cup minced onion</li>
+        <li>1 (28 ounce) can crushed tomatoes</li>
+        <li>1 (8 ounce) can tomato sauce</li>
+        <li>2 tablespoons chopped fresh parsley, divided</li>
+        <li>1 clove garlic, crushed</li>
+        <li>1 ½ teaspoons dried basil</li>
+        <li>1 ½ teaspoons salt</li>
+        <li>½ teaspoon dried oregano</li>
+        <li>⅛ teaspoon white sugar</li>
+        <li>1 (16 ounce) package lasagna noodles</li>
+        <li>1 pound small-curd cottage cheese</li>
+        <li>¾ cup grated Parmesan cheese</li>
+        <li>3 large eggs</li>
+        <li>2 teaspoons salt</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>1 (16 ounce) package shredded mozzarella cheese</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            <strong>Cook the meet:</strong> Cook the ground meat in a skillet until browned and crumbly.<br>
+            Add the onion and continue cooking until it's translucent.<br>
+            Stir in the canned tomato products, half of the parsley, garlic, basil,<br> 1.5 teaspoons of salt, oregano, and sugar.<br>
+        </li>
+        <li>
+            <strong>Cook the noodles:</strong> Boil the lasagna noodles in lightly salted water <br>
+            until they're al dente.
+        </li>
+        <li>
+            <strong>Make the cheese layer:</strong> Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, <br>
+            the remaining salt, and pepper in a bowl.
+        </li>
+        <li>
+            <strong>Assemble the lasagna:</strong> Layer the ingredients according to the recipe <br>
+            (starting with sauce and ending with mozzarella) until the lasagna is assembled.
+        </li>
+        <li>
+            <strong>Bake the lasagna:</strong> Cover with foil and bake in the preheated oven for about half an hour. <br>
+            Remove the foil and continue baking until the top is golden brown.
+        </li>
+    </ol>
 </body>
 </html>
