Add Potato quiche recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,8 +14,7 @@
     <p>
         <li>
         Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor <br> 
-        — try this homemade lasagna recipe today!
-        You'll find the full, step-by-step recipe below — here's what you will need: 
+        — try this homemade lasagna recipe today! You'll find the full, step-by-step recipe below — here's what you will need: 
         </li>
     </p>
     <h2>Ingredients</h2>
