Add final recipeand modify

--- a/recipes/potato-quiche.html
+++ b/recipes/potato-quiche.html
@@ -7,7 +7,7 @@
     <title>Making Potato Quiche</title>
 </head>
 <body>
-    <h1>Shredded Potato Quiche Recipe</h1>
+    <h1>Potato Quiche Recipe</h1>
     <img src="../images/potato-quiche.jpeg" 
          alt="Potato quiche image" width="430" height="500">
     <h2>A quick and super easy potato quiche recipe</h2>
@@ -18,7 +18,7 @@
               broccoli or tomatoes, etc — here's what you will need: 
         </li>
     </p>
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>1 (16 ounce) package frozen shredded hash brown potatoes, thawed</li>
         <li>¼ cup butter, melted</li>
@@ -28,7 +28,7 @@
         <li>¼ cup milk</li>
         <li>salt and pepper to taste</li>
     </ul>
-    <h2>Steps</h2>
+    <h3>Steps</h3>
     <ol>
         <li>
             Preheat oven to 375 degrees F (190 degrees C). <br>
@@ -45,7 +45,7 @@
         <li>
             Bake in preheated oven until center is set, about 20 minutes. <br>
             The quiche will be browned on top and a knife<br>
-             inserted into the center will come out clean.
+            inserted into the center will come out clean.
         </li>
     </ol>
 </body>
