--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-       <li><a href="./recipes/potato-quiche.html">Potato Quiche Recipe</a></li>  
+       <li><a href="./recipes/potato-quiche.html">Potato Quiche Recipe</a></li> 
+       <li><a href="./recipes/reindeer-munch.html">Reindeer Munch Recipe</a></li>   
     </ul>
 </body>
 </html>
