--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/christmas-dinner.jpeg" width="620">
     <ul>
        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
        <li><a href="./recipes/potato-quiche.html">Potato Quiche Recipe</a></li> 
