--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../stlye.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
+    <h1 id="lasagna">Lasagna Recipe</h1>
     <img src="../images/lasagna.jpeg" 
          alt="Homecooked lasagna image" width="520">
     <h2>A home-cooked lasagna in just 30 minutes</h2>
