--- a/recipes/potato-quiche.html
+++ b/recipes/potato-quiche.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../stlye.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making Potato Quiche</title>
 </head>
 <body>
-    <h1>Potato Quiche Recipe</h1>
+    <h1 id="potato">Potato Quiche Recipe</h1>
     <img src="../images/potato-quiche.jpeg" 
-         alt="Potato quiche image" width="430" height="500">
+         alt="Potato quiche image" width="430" height="475">
     <h2>A quick and super easy potato quiche recipe</h2>
     <p>
         <li>
