--- a/recipes/reindeer-munch.html
+++ b/recipes/reindeer-munch.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../stlye.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making Reindeer Munch</title>
 </head>
 <body>
-    <h1>Reindeer Munch</h1>
+    <h1 id="title">Reindeer Munch</h1>
     <img src="../images/reindeer-munch.png" 
-         alt="Reindeer-munch image" width="620" height="550">
+         alt="Reindeer-munch image" width="520" height="450">
     <h2>An easy dessert with rice crispies</h2>
     <p>
         <li>
