--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="stlye.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="main-title">Odin Recipes</h1>
     <img src="./images/christmas-dinner.jpeg" width="620">
     <ul>
-       <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-       <li><a href="./recipes/potato-quiche.html">Potato Quiche Recipe</a></li> 
-       <li><a href="./recipes/reindeer-munch.html">Reindeer Munch Recipe</a></li>   
+       <li><a href="./recipes/lasagna.html" id="lasagna">Lasagna Recipe</a></li>
+       <li><a href="./recipes/potato-quiche.html" id="potato">Potato Quiche Recipe</a></li> 
+       <li><a href="./recipes/reindeer-munch.html" id="title">Reindeer Munch Recipe</a></li>   
     </ul>
 </body>
 </html>
